mpv can open gifs too

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -38,24 +38,6 @@ ext mscx, X, flag f = musescore -- "$@"
 ext mscz, X, flag f = musescore -- "$@"
 ext blend, X, flag f = blender -- "$@"
 
-#--------------------------------------------
-# Audio / Video without X
-#-------------------------------------------
-mime ^video|audio, flag t = mpv -- "$@"
-
-#mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
-#mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
-#mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
-
-#mime ^video, terminal, !X, has mpv       = mpv -- "$@"
-#mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
-#mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
-
-#--------------------------------------------
-# Audio / Video with a GUI
-#-------------------------------------------
-#mime ^video|audio, X, flag f = vlc -- "$@"
-
 #-------------------------------------------
 # Documents
 #-------------------------------------------
@@ -86,6 +68,22 @@ ext pdf|eps,     X, flag f = inkscape -- "$@"
 
 # Adobe Illustrator
 ext ai, X, flag f = inkscape -- "$@"
+
+#--------------------------------------------
+# Audio / Video
+#-------------------------------------------
+mime ^video|audio, flag t = mpv -- "$@"
+ext gif, flag t = mpv -- "$@"
+
+#mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
+#mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
+#mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+
+#mime ^video, terminal, !X, has mpv       = mpv -- "$@"
+#mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
+#mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
+
+#mime ^video|audio, X, flag f = vlc -- "$@"
 
 #-------------------------------------------
 # Archives
