ranger: open djvu with evince

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -42,6 +42,7 @@ ext blend, X, flag f = blender -- "$@"
 # Documents
 #-------------------------------------------
 ext djvu, X, flag f = zathura -- "$@"
+ext djvu, X, flag f = evince -- "$@"
 ext pdf,  X, flag f = zathura -- "$@"
 ext pdf,  X, flag f = evince -- "$@"
 ext pdf,  X, flag f = firefox -- "$@"
