ranger: new image previewer (but slower than w3m)

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -4,6 +4,7 @@ set preview_script /usr/share/doc/ranger/config/scope.sh
 setlocal path=/data/ vcs_aware true
 set preview_images true
 #set preview_images_method w3m
+#set preview_images_method ueberzug
 #set preview_images_method urxvt
 # need rxvt-unicode-pixbuf from AUR
 set draw_borders true
