ranger: update config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,16 +1,15 @@
 # Configuration
 set colorscheme solarized
 set preview_script /usr/share/doc/ranger/config/scope.sh
-setlocal path=/data/ vcs_aware true
+# Uncomment SVG and video as image preview in scope.sh.
 set preview_images true
-#set preview_images_method w3m
-#set preview_images_method ueberzug
-#set preview_images_method urxvt
-# need rxvt-unicode-pixbuf from AUR
+set preview_images_method w3m
+#set preview_images_method ueberzug  # slower than w3m
+#set preview_images_method urxvt  # need rxvt-unicode-pixbuf from AUR
+setlocal path=/data/ vcs_aware true
 set draw_borders true
 set collapse_preview false
-# It can sometimes lag otherwise.
-set preview_max_size 100000000
+set preview_max_size 100000000  # It can sometimes lag otherwise.
 
 # Directory shortcuts
 #map gd cd /data
@@ -27,7 +26,7 @@ unmap gM
 
 # Commands
 map dD shell mv -t ~/.local/share/Trash/files %s
-map dr console delete
+#map dr console delete
 #map S shell fish
 map S shell urxvt -e fish &
 map <c-n> eval fm.tab_new('%d')
