ranger: fix comments

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -4,12 +4,13 @@ set preview_script /usr/share/doc/ranger/config/scope.sh
 # Uncomment SVG and video as image preview in scope.sh.
 set preview_images true
 set preview_images_method w3m
-#set preview_images_method ueberzug  # slower than w3m
-#set preview_images_method urxvt  # need rxvt-unicode-pixbuf from AUR
+#set preview_images_method ueberzug  slower than w3m
+#set preview_images_method urxvt  need rxvt-unicode-pixbuf from AUR
 setlocal path=/data/ vcs_aware true
 set draw_borders true
 set collapse_preview false
-set preview_max_size 100000000  # It can sometimes lag otherwise.
+# It can otherwise lag.
+set preview_max_size 100000000
 
 # Directory shortcuts
 #map gd cd /data
