open on new firefox windows

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -26,7 +26,7 @@ ext ipynb, flag t = nbshow -OAMD -- "$@" | $PAGER
 #-------------------------------------------
 # Websites
 #-------------------------------------------
-ext x?html?, X, flag f = firefox --new-window -- "$@"
+ext x?html?, X, flag f = firefox --new-window "$@"
 
 #-------------------------------------------
 # Others
@@ -45,7 +45,7 @@ ext djvu, X, flag f = zathura -- "$@"
 ext djvu, X, flag f = evince -- "$@"
 ext pdf,  X, flag f = zathura -- "$@"
 ext pdf,  X, flag f = evince -- "$@"
-ext pdf,  X, flag f = firefox -- "$@"
+ext pdf,  X, flag f = firefox --new-window "$@"
 ext pdf,  X, flag f = pdfpc   -- "$@"
 ext pdf,  X, flag f = xournalpp -- "$@"
 ext xoj,  X, flag f = xournalpp -- "$@"
@@ -60,7 +60,7 @@ ext pdf,                      X, flag f = libreoffice "$@"
 # Images
 #-------------------------------------------
 mime ^image,     X, flag f = sxiv -a -- "$@"
-mime ^image,     X, flag f = firefox -- "$@"
+mime ^image,     X, flag f = firefox --new-window "$@"
 mime ^image,     X, flag f = gimp -- "$@"
 mime ^image,     X, flag f = inkscape -- "$@"
 ext xcf,         X, flag f = gimp -- "$@"
