--- a/.config/sway/config
+++ b/.config/sway/config
@@ -541,40 +541,69 @@ mode "$android_control" {
 	bindsym Escape mode "default"
 }
 
-#-------------#
-# Mode: music #
-#-------------#
+#-------#
+# Music #
+#-------#
 
 #set $mpc exec mpc -h SECRET
 set $mpc exec mpc -h SECRET
 
-set $mode_music Music: (p) previous, (n) next, (space) play / pause, (a) analog, (h) HDMI, (b) Bluetooth
+set $mode_music Music: (p) previous, (n) next, (space) play / pause
 bindsym $mod+m mode "$mode_music"
 
 mode "$mode_music" {
 	bindsym space $mpc toggle,   mode "default"
 	bindsym n $mpc next,     mode "default"
 	bindsym p $mpc prev,     mode "default"
+	bindsym Escape mode "default"
+}
+
+bindsym XF86AudioNext $mpc next
+bindsym XF86AudioPrev $mpc prev
+bindsym XF86AudioPlay $mpc toggle
+bindsym XF86AudioStop $mpc toggle
+
+#---------------#
+# Audio / sound #
+#---------------#
+
+set $mode_audio Audio sink/source: (a) analog, (h) HDMI, (b) Bluetooth
+bindsym $mod+a mode "$mode_audio"
+
+mode "$mode_audio" {
 	bindsym a exec pactl-move sink alsa_output.pci-0000_00_1b.0.analog-stereo, exec pactl-move source alsa_input.pci-0000_00_1b.0.analog-stereo, mode "default"
 	bindsym h exec pactl-move sink alsa_output.pci-0000_00_03.0.hdmi-stereo-extra1, mode "default"
-	bindsym b mode "$music_bluetooth"
+	bindsym b mode "$audio_bluetooth"
 	bindsym Escape mode "default"
 }
 
 set $btc exec bluetoothctl connect
 set $btd exec bluetoothctl disconnect
 
-set $music_bluetooth Bluetooth devices: (s) speakers iCube 95 BT, (h) headset BT25 II, (c) CD400U (Orsonnens)
-mode "$music_bluetooth" {
+set $audio_bluetooth Bluetooth devices: (s) speakers iCube 95 BT, (h) headset BT25 II, (c) CD400U (Orsonnens)
+mode "$audio_bluetooth" {
 	bindsym s $btc "00:18:96:00:FF:A9", exec pactl-move sink bluez_sink.00_18_96_00_FF_A9.a2dp_sink, mode "default"
 	bindsym c $btc "04:FE:A1:55:A6:7A", exec pactl-move sink bluez_sink.04_FE_A1_55_A6_7A.a2dp_sink, mode "default"
 	bindsym h $btc "09:00:4B:00:12:08", exec pactl-move sink bluez_sink.09_00_4B_00_12_08.headset_head_unit, exec pactl-move source bluez_source.09_00_4B_00_12_08.headset_head_unit, mode "default"
 	bindsym Escape mode "default"
 }
 
-#------------------#
-# Mode: brightness #
-#------------------#
+#bindsym XF86AudioRaiseVolume  exec amixer set -D default:PCH Master 5%+
+#bindsym XF86AudioLowerVolume  exec amixer set -D default:PCH Master 5%-
+#bindsym XF86AudioMute         exec amixer set -D default:PCH Master toggle
+#set $source alsa_input.pci-0000_00_1b.0.analog-stereo
+set $source @DEFAULT_SOURCE@
+#set $sink  alsa_output.pci-0000_00_1b.0.analog-stereo
+#set $sink $(pactl list short sinks | grep RUNNING | awk '{print $1}') # running source, might be none
+set $sink @DEFAULT_SINK@
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $sink +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume $sink -5%
+bindsym XF86AudioMute        exec pactl set-sink-mute   $sink toggle
+bindsym XF86AudioMicMute     exec pactl set-source-mute $source toggle
+
+#-------------------#
+# Screen brightness #
+#-------------------#
 
 set $mode_brightness Screen brightness: 1-10
 bindsym $mod+Shift+b mode "$mode_brightness"
@@ -592,10 +621,6 @@ mode "$mode_brightness" {
 	bindsym Escape mode "default"
 }
 
-#------------------------#
-# Miscellaneous bindings #
-#------------------------#
-
 # Switched from xbacklight to light when changing DDX from xf86-video-intel to xf86-video-modesetting
 # https://www.reddit.com/r/archlinux/comments/4cojj9/it_is_probably_time_to_ditch_xf86videointel/
 # bindsym XF86MonBrightnessUp   exec light -A 1
@@ -603,27 +628,10 @@ mode "$mode_brightness" {
 bindsym XF86MonBrightnessUp   exec brightness 1%+
 bindsym XF86MonBrightnessDown exec brightness 1%-
 
-# Sound control
-#bindsym XF86AudioRaiseVolume  exec amixer set -D default:PCH Master 5%+
-#bindsym XF86AudioLowerVolume  exec amixer set -D default:PCH Master 5%-
-#bindsym XF86AudioMute         exec amixer set -D default:PCH Master toggle
-#set $source alsa_input.pci-0000_00_1b.0.analog-stereo
-set $source @DEFAULT_SOURCE@
-#set $sink  alsa_output.pci-0000_00_1b.0.analog-stereo
-#set $sink $(pactl list short sinks | grep RUNNING | awk '{print $1}')
-set $sink @DEFAULT_SINK@
-set $pactl exec pactl
-bindsym XF86AudioRaiseVolume $pactl set-sink-volume $sink +5%
-bindsym XF86AudioLowerVolume $pactl set-sink-volume $sink -5%
-bindsym XF86AudioMute        $pactl set-sink-mute   $sink toggle
-bindsym XF86AudioMicMute     $pactl set-source-mute $source toggle
+#-------------#
+# Screenshots #
+#-------------#
 
-bindsym XF86AudioNext $mpc next
-bindsym XF86AudioPrev $mpc prev
-bindsym XF86AudioPlay $mpc toggle
-bindsym XF86AudioStop $mpc toggle
-
-# Screenshots
 set $filename /data/inputs/screenshots/$(date +'%Y%m%d_%H%M%S.png')
 bindsym Print exec grim $filename
 #bindsym Shift+Print exec scrot -u $filename
