--- a/.config/sway/config
+++ b/.config/sway/config
@@ -567,12 +567,13 @@ bindsym XF86AudioStop $mpc toggle
 # Audio / sound #
 #---------------#
 
-set $mode_audio Audio sink/source: (a) analog, (h) HDMI, (b) Bluetooth
+set $mode_audio Audio sink/source: (l) laptop, (w) workstation, (h) HDMI, (b) Bluetooth
 bindsym $mod+a mode "$mode_audio"
 
 mode "$mode_audio" {
-	bindsym a exec pactl-move sink alsa_output.pci-0000_00_1b.0.analog-stereo, exec pactl-move source alsa_input.pci-0000_00_1b.0.analog-stereo, mode "default"
-	bindsym h exec pactl-move sink alsa_output.pci-0000_00_03.0.hdmi-stereo-extra1, mode "default"
+	bindsym l exec pactl-move sink alsa_output.pci-0000_00_1b.0.analog-stereo, exec pactl-move source alsa_input.pci-0000_00_1b.0.analog-stereo, mode "default"
+	bindsym w exec pactl-move sink alsa_output.usb-C-Media_Electronics_Inc._ThinkPad_OneLink_Dock_USB_Audio-00.analog-stereo, exec pactl-move source alsa_input.usb-C-Media_Electronics_Inc._ThinkPad_OneLink_Dock_USB_Audio-00.analog-stereo, mode "default"
+	bindsym h exec pactl-move sink alsa_output.pci-0000_00_03.0.hdmi-stereo, mode "default"
 	bindsym b mode "$audio_bluetooth"
 	bindsym Escape mode "default"
 }
