ranger: keep filter when changing tab

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -39,4 +39,4 @@ setlocal path=/data/inputs sort mtime
 
 # Search
 map f console scout -fpit%space
-set clear_filters_on_dir_change true
+#set clear_filters_on_dir_change true
