ranger: experiment with not sorting folders first

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -33,6 +33,7 @@ map S shell urxvt -e fish &
 map <c-n> eval fm.tab_new('%d')
 
 # Sorting
+set sort_directories_first false
 set sort_reverse true
 setlocal path=/data/inputs sort_reverse false
 setlocal path=/data/inputs sort mtime
