view images with imv (instead of the unmaintained sxiv)

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -59,6 +59,7 @@ ext pdf,                      X, flag f = libreoffice "$@"
 #-------------------------------------------
 # Images
 #-------------------------------------------
+mime ^image,     X, flag f = imv -- "$@"
 mime ^image,     X, flag f = sxiv -a -- "$@"
 mime ^image,     X, flag f = firefox --new-window "$@"
 mime ^image,     X, flag f = gimp -- "$@"
