ranger & imv: open all images in folder

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -9,6 +9,7 @@ set preview_images_method w3m
 setlocal path=/data/ vcs_aware true
 set draw_borders true
 set collapse_preview false
+#set open_all_images true
 # It can otherwise lag.
 set preview_max_size 100000000
 
