split Google Pixel motion photos in jpg and mp4

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -73,6 +73,9 @@ ext pdf|eps,     X, flag f = inkscape -- "$@"
 # Adobe Illustrator
 ext ai, X, flag f = inkscape -- "$@"
 
+# Google Pixel motion photos (PXL_yyyymmdd_hhmmssxxx.MP.jpg).
+match .*.MP.jpg, flag f = for file in "$@"; do split-motion-photo "$file"; done
+
 #--------------------------------------------
 # Audio / Video
 #-------------------------------------------
