--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -59,9 +59,9 @@ ext pdf,                      X, flag f = libreoffice "$@"
 #-------------------------------------------
 # Images
 #-------------------------------------------
-#mime ^image,     X, flag f = imv -- "$@"
+mime ^image,     X, flag f = imv -- "$@"
 #mime ^image,     X, flag f = imv . -n "$@"
-mime ^image,     X, flag f = imv .
+#mime ^image,     X, flag f = imv .
 mime ^image,     X, flag f = sxiv -a -- "$@"
 mime ^image,     X, flag f = firefox --new-window "$@"
 mime ^image,     X, flag f = gimp -- "$@"
