--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -27,7 +27,7 @@ map gt cd ~/.local/share/Trash
 unmap gM
 
 # Commands
-map dD shell mv -t ~/.local/share/Trash/files %s
+map dD shell trash-put %s
 #map dr console delete
 #map S shell fish
 map S shell urxvt -e fish &
