ranger: organize config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -13,7 +13,24 @@ set collapse_preview false
 # It can otherwise lag.
 set preview_max_size 100000000
 
-# Directory shortcuts
+# Configuration: sorting
+set sort_directories_first false
+set sort_reverse true
+setlocal path=/data/inputs sort_reverse false
+setlocal path=/data/inputs sort mtime
+
+# Search
+#set clear_filters_on_dir_change true
+map f console scout -fpit%space
+
+# Commands
+map dD shell trash-put %s
+#map dr console delete
+#map S shell fish
+map S shell urxvt -e fish &
+
+# Commands: directory shortcuts
+# TODO: use bookmarks instead
 #map gd cd /data
 map gr cd /data/research
 map gs cd /data/sociétés
@@ -25,19 +42,3 @@ map gn cd /data/notes
 map gm cd /mnt
 map gt cd ~/.local/share/Trash
 unmap gM
-
-# Commands
-map dD shell trash-put %s
-#map dr console delete
-#map S shell fish
-map S shell urxvt -e fish &
-
-# Sorting
-set sort_directories_first false
-set sort_reverse true
-setlocal path=/data/inputs sort_reverse false
-setlocal path=/data/inputs sort mtime
-
-# Search
-map f console scout -fpit%space
-#set clear_filters_on_dir_change true
