--- a/.ssh/config
+++ b/.ssh/config
@@ -6,12 +6,12 @@ IdentitiesOnly yes
 
 Host github.com
  IdentityFile ~/.ssh/id_github
- # avoid adding many IPs to known_hosts
+ # avoid adding many IPs to known_hosts (default in newer OpenSSH)
  CheckHostIP no
 
 Host gitlab.com
  IdentityFile ~/.ssh/id_gitlab
- # avoid adding many IPs to known_hosts
+ # avoid adding many IPs to known_hosts (default in newer OpenSSH)
  CheckHostIP no
 
 Host c4science.ch
