ranger: convert JPGs

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -76,6 +76,9 @@ ext ai, X, flag f = inkscape -- "$@"
 # Google Pixel motion photos (PXL_yyyymmdd_hhmmssxxx.MP.jpg).
 match .*.MP.jpg, flag f = for file in "$@"; do split-motion-photo "$file"; done
 
+# compress JPGs
+match .*.jpg, flag f = for file in "$@"; do convert -quality 65 "$file" "$file"; done
+
 #--------------------------------------------
 # Audio / Video
 #-------------------------------------------
