git: hotmail instead of no longer valid epfl email

--- a/.config/git/config
+++ b/.config/git/config
@@ -1,6 +1,6 @@
 [user]
 	name = Michaël Defferrard
-	email = michael.defferrard@epfl.ch
+	email = m.deff@hotmail.com
 [push]
 	default = simple
 [pull]
