--- a/.config/git/config
+++ b/.config/git/config
@@ -19,3 +19,8 @@
 	insteadOf = "aur:"
 [url "ssh://aur@aur.archlinux.org/"]
 	pushInsteadOf = "aur:"
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
