ranger: open ics with thunderbird

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -37,6 +37,7 @@ ext musicxml, X, flag f = musescore -- "$@"
 ext mscx, X, flag f = musescore -- "$@"
 ext mscz, X, flag f = musescore -- "$@"
 ext blend, X, flag f = blender -- "$@"
+ext ics, X, flag f = thunderbird -- "$@"
 
 #-------------------------------------------
 # Documents
