Revert "xrdb isn't exec by sway anymore → run in startw"
This reverts commit 9cfb229562df23d564edb1424aed5eaffee3bda0.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,6 +12,14 @@
 # remote display (alternative to mirror display?)
 # program launcher
 
+#----------------------#
+# X11 only, to replace #
+#----------------------#
+
+# Color theme for urxvt.
+# Urxvt can read ~/.Xdefaults, but without a pre-processor.
+exec xrdb -load ~/.Xresources
+
 #--------#
 # Inputs #
 #--------#
